[gd_scene load_steps=2 format=3 uid="uid://dqs0k2sw85qhy"]

[ext_resource type="Script" path="res://game/systems/map_shadow_generator.gd" id="1_eayh6"]

[node name="ShadowMap" type="Node2D"]
script = ExtResource("1_eayh6")

[node name="ShadowTiles" type="Node2D" parent="."]

[node name="DynamicRevealers" type="Node2D" parent="."]
z_index = 1

[node name="StaticRevealers" type="Node2D" parent="."]
z_index = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://game/systems/shadow_tile.tscn")
spawn_path = NodePath("../ShadowTiles")
